--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="inicio">
         <div class="um">
             <h3>Apresentação</h3>
             <p>O curso técnico de Informática no CEFET-MG começou a funcionar em 1989, com 40 alunos. 
@@ -53,7 +53,7 @@
         </div>
     </main>
     <footer>
-        <h3>© copyleft</h3>
+        <p>© copyleft</p>
     </footer>
 </body>
 
