--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <main class="inicio">
         <div class="um">
             <h3>Apresentação</h3>
-            <p>O curso técnico de Informática no CEFET-MG começou a funcionar em 1989, com 40 alunos. 
+            <article>O curso técnico de Informática no CEFET-MG começou a funcionar em 1989, com 40 alunos. 
             Era um curso técnico de Informática, focado em desenvolvimento de software e também em eletrônica. 
             A partir de 2010, o curso sofreu modificações profundas, foi ampliado e passou a ser designado simplesmente como Curso Técnico de Informática.
             A ênfase mudou então para modelagem, desenvolvimento de software, e programação para WEB.
-            Temos hoje um curso de informática moderno e atualizado com as novas tecnologias; um curso que prima pelo ensino de qualidade.</p>
+            Temos hoje um curso de informática moderno e atualizado com as novas tecnologias; um curso que prima pelo ensino de qualidade.</article>
         </div>
         <div class="dois">
             <h3>Campo de Atuação</h3>
@@ -49,11 +49,11 @@
         </div>
         <div class="tres">
             <h3>Modalidades</h3>
-            <p>◾ Integrado, em 3 anos - Diurnos</p>
+            <p> Integrado, em 3 anos - Diurnos</p>
         </div>
     </main>
     <footer>
-        <p>© copyleft</p>
+        <div>&copy; copyleft</div>
     </footer>
 </body>
 
