--- a/pages/tabela.html
+++ b/pages/tabela.html
@@ -30,8 +30,8 @@
         </nav>
     </header>
     <main class="tabela">
-    <p>Curso</p>
     <table>
+        <caption>Curso</caption>
         <thead>
             <tr>
                 <th>Área</th>
@@ -49,69 +49,69 @@
             <tr>
                 <th rowspan="11">Técnica</th>
                 <th rowspan="3">1o ano</th>
-                <td>Banco de Dados</td>
+                <td class="mat">Banco de Dados</td>
                 <td>2</td>
                 <td>0</td>
                 <td>0</td>
             </tr>
             <tr>
-                <td>Fundamentos de Informática</td>
+                <td class="mat">Fundamentos de Informática</td>
                 <td>2</td>
                 <td>0</td>
                 <td>0</td>
             </tr>
             <tr>
-                <td>Programação I</td>
+                <td class="mat">Programação I</td>
                 <td>2</td>
                 <td>0</td>
                 <td>0</td>
             </tr>
             <tr>
                 <th rowspan="4">2o ano</th>
-                <td>Aplicações Web I</td>
+                <td class="mat">Aplicações Web I</td>
                 <td>0</td>
                 <td>4</td>
                 <td>0</td>
             </tr>
             <tr>
-                <td>Estrutura de Dados</td>
+                <td class="mat">Estrutura de Dados</td>
                 <td>0</td>
                 <td>4</td>
                 <td>0</td>
             </tr>
             <tr>
-                <td>Programação II</td>
+                <td class="mat">Programação II</td>
                 <td>0</td>
                 <td>4</td>
                 <td>0</td>
             </tr>
             <tr>
-                <td>Redes de Computadores</td>
+                <td class="mat">Redes de Computadores</td>
                 <td>0</td>
                 <td>2</td>
                 <td>0</td>
             </tr>
             <tr>
                 <th rowspan="4">3o ano</th>
-                <td>Aplicações Web II</td>
+                <td class="mat">Aplicações Web II</td>
                 <td>0</td>
                 <td>0</td>
                 <td>4</td>
             </tr>
             <tr>
-                <td>Aplicações Móveis</td>
+                <td class="mat">Aplicações Móveis</td>
                 <td>0</td>
                 <td>0</td>
                 <td>4</td>
             </tr>
             <tr>
-                <td>Engenharia de Software</td>
+                <td class="mat">Engenharia de Software</td>
                 <td>0</td>
                 <td>0</td>
                 <td>4</td>
             </tr>
             <tr>
-                <td>Montagem e Manutençao de Computadores</td>
+                <td class="mat">Montagem e Manutençao de Computadores</td>
                 <td>0</td>
                 <td>0</td>
                 <td>2</td>
@@ -128,7 +128,7 @@
     </table>
     </main>
     <footer>
-        <p>© copyleft</p>
+        <div>© copyleft</div>
     </footer>
 </body>
 
