--- a/pages/resposta.html
+++ b/pages/resposta.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../estilo.css">
     <title>FAQ</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="header">CEFET-MG - Campus Varginha - Curso Técnico</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="../index.html">Início</a>
+                </li>
+                <li>
+                    <a href="../pages/tabela.html">Curso</a>
+                </li>
+                <li>
+                    <a href="../pages/resposta.html">FAQ</a>
+                </li>
+                <li>
+                    <a href="../pages/formulario.html">Contato</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <div>© copyleft</div>
+    </footer>
 </body>
 </html>
