--- a/index.html
+++ b/index.html
@@ -32,24 +32,33 @@
     <main class="inicio">
         <div class="um">
             <h3>Apresentação</h3>
-            <article>O curso técnico de Informática no CEFET-MG começou a funcionar em 1989, com 40 alunos. 
-            Era um curso técnico de Informática, focado em desenvolvimento de software e também em eletrônica. 
-            A partir de 2010, o curso sofreu modificações profundas, foi ampliado e passou a ser designado simplesmente como Curso Técnico de Informática.
-            A ênfase mudou então para modelagem, desenvolvimento de software, e programação para WEB.
-            Temos hoje um curso de informática moderno e atualizado com as novas tecnologias; um curso que prima pelo ensino de qualidade.</article>
+            <p>O curso técnico de Informática no CEFET-MG começou a funcionar em 1989, com 40 alunos.
+                Era um curso técnico de Informática, focado em desenvolvimento de software e também em eletrônica.
+                A partir de 2010, o curso sofreu modificações profundas, foi ampliado e passou a ser designado
+                simplesmente como Curso Técnico de Informática.
+                A ênfase mudou então para modelagem, desenvolvimento de software, e programação para WEB.
+                Temos hoje um curso de informática moderno e atualizado com as novas tecnologias; um curso que prima
+                pelo ensino de qualidade.</p>
         </div>
         <div class="dois">
-            <h3>Campo de Atuação</h3>
-            <p>I. Desenvolvimento e manutenção de Programas Aplicativos e Sistemas Operacionais;</p>
-            <p>II. Montagem, instalação e manutenção de equipamentos, bem como a administração e manutenção de Redes de Informática, atentando para a atualização,
-            tendo em vista as rápidas mudanças da tecnologia;</p>
-            <p>III. Analise e operação de serviços e funções de sistemas operacionais;</p>
-            <p>IV. Organização, coleta e documentação de informações sobre o desenvolvimento de projetos;</p>
-            <p>V. Avaliação e especificação de necessidades de treinamento e de suporte técnico aos usuários;</p>
+            <ol>
+                <h3>Campo de Atuação</h3>
+                <li>Desenvolvimento e manutenção de Programas Aplicativos e Sistemas Operacionais;</li>
+                <li>Montagem, instalação e manutenção de equipamentos, bem como a administração e manutenção de
+                    Redes de Informática, atentando para a atualização,
+                    tendo em vista as rápidas mudanças da tecnologia;</li>
+                <li>Analise e operação de serviços e funções de sistemas operacionais;</li>
+                <li>Organização, coleta e documentação de informações sobre o desenvolvimento de projetos;</li>
+                <li>Avaliação e especificação de necessidades de treinamento e de suporte técnico aos usuários;</li>
+            </ol>
         </div>
         <div class="tres">
             <h3>Modalidades</h3>
-            <p> Integrado, em 3 anos - Diurnos</p>
+            <ol>
+                <li>
+                    <p> Integrado, em 3 anos - Diurnos</p>
+                </li>
+            </ol>
         </div>
     </main>
     <footer>
