--- a/pages/resposta.html
+++ b/pages/resposta.html
@@ -27,8 +27,46 @@
             </ul>
         </nav>
     </header>
-    <main>
-
+    <main id="topo">
+        <section>
+            <ol>
+                <li>
+                    <a href="#resposta1">Pergunta 1</a>
+                </li>
+                <li>
+                    <a href="#resposta2">Pergunta 2</a>
+                </li>
+                <li>
+                    <a href="#resposta3">Pergunta 3</a>
+                </li>
+                <li>
+                    <a href="#resposta4">Pergunta 4</a>
+                </li>
+                <li>
+                    <a href="#resposta5">Pergunta 5</a>
+                </li>
+            </ol>
+        </section>
+        <section id="resposta1">
+            <h3>Resposta 1</h3>
+            <a href="#topo">Voltar</a>
+        </section>
+        <section id="resposta2">
+            <h3>Resposta 2</h3>
+            <a href="#topo">Voltar</a>
+        </section>
+        <section id="resposta3">
+            <h3>Resposta 3</h3>
+            <a href="#topo">Voltar</a>
+        </section>
+        <section id="resposta4">
+            <h3>Resposta 4</h3>
+            <a href="#topo">Voltar</a>
+        </section>
+        <section id="resposta5">
+            <h3>Resposta 5</h3>
+            <a href="#topo">Voltar</a>
+        </section>
     </main>
     <footer>
         <div>© copyleft</div>
