--- a/pages/resposta.html
+++ b/pages/resposta.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../estilo.css">
     <title>FAQ</title>
 </head>
-<body>
+<body id="topo">
     <header>
         <h1 class="header">CEFET-MG - Campus Varginha - Curso Técnico</h1>
         <nav>
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    <main id="topo">
+    <main>
         <section>
             <ol>
                 <li>
