--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -28,7 +28,9 @@
         </nav>
     </header>
     <main>
-
+        <form action="" method="post" enctype="multipart/form-data">
+            <p>Nome</p>
+        </form>
     </main>
     <footer>
         <div>© copyleft</div>
