--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <main class="inicio">
         <div class="um">
             <h3>Apresentação</h3>
-            <p>O curso técnico de Informática no CEFET-MG começou a funcionar em 1989, com 40 alunos.
+            <article>O curso técnico de Informática no CEFET-MG começou a funcionar em 1989, com 40 alunos.
                 Era um curso técnico de Informática, focado em desenvolvimento de software e também em eletrônica.
                 A partir de 2010, o curso sofreu modificações profundas, foi ampliado e passou a ser designado
                 simplesmente como Curso Técnico de Informática.
                 A ênfase mudou então para modelagem, desenvolvimento de software, e programação para WEB.
                 Temos hoje um curso de informática moderno e atualizado com as novas tecnologias; um curso que prima
-                pelo ensino de qualidade.</p>
+                pelo ensino de qualidade.</article>
         </div>
         <div class="dois">
             <ol>
