--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3>Modalidades</h3>
             <ol>
                 <li>
-                    <p> Integrado, em 3 anos - Diurnos</p>
+                    <article> Integrado, em 3 anos - Diurnos</article>
                 </li>
             </ol>
         </div>
