--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <form action="" method="post" enctype="multipart/form-data">
+        <form method="post" action>
             <fieldset>
                 <legend>Contato</legend>
                 <p>Nome: <input type="text" name="nome" placeholder="João"><br></p>
