--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -34,68 +34,64 @@
             <fieldset>
                 <legend>Contato</legend>
                 <div>
-                    <p>Nome: <input type="text" name="nome" placeholder="João"></p>
+                    <label for="nome">Nome :</label>
+                    <input type="text" name="nome" placeholder="João">
                 </div>
                 <div>
-                    <p>Email: <input type="email" name="email" placeholder="name@email"></p>
+                    <label for="email">Email :</label>
+                    <input type="email" name="email" placeholder="name@email">
                 </div>
                 <div>
-                    <p><label for="masc">Masculino</label>
-                        <input type="radio" name="sexo" id="masc" value="Masculino">
-                        <label for="fem">Feminino</label>
-                        <input type="radio" name="sexo" id="fem" value="Feminino">
-                </p>
+                    <input type="radio" name="sexo" id="masc" value="Masculino">
+                    <label for="masc">Masculino</label>
+                    <input type="radio" name="sexo" id="fem" value="Feminino">
+                    <label for="fem">Feminino</label>
                 </div>
                 <div>
-                    <p>
-                        <label for="estado">Estado/Cidade</label>
-                        <select name="estado" id="">
-                            <option value=""></option>
-                            <option value="1">AC</option>
-                            <option value="2">AL</option>
-                            <option value="3">AP</option>
-                            <option value="4">AM</option>
-                            <option value="5">BA</option>
-                            <option value="6">CE</option>
-                            <option value="27">DF</option>
-                            <option value="7">ES</option>
-                            <option value="8">GO</option>
-                            <option value="9">MA</option>
-                            <option value="10">MT</option>
-                            <option value="11">MS</option>
-                            <option value="12">MG</option>
-                            <option value="13">PA</option>
-                            <option value="14">PB</option>
-                            <option value="15">PR</option>
-                            <option value="16">PE</option>
-                            <option value="17">PI</option>
-                            <option value="18">RJ</option>
-                            <option value="19">RN</option>
-                            <option value="20">RS</option>
-                            <option value="21">RO</option>
-                            <option value="22">RR</option>
-                            <option value="23">SC</option>
-                            <option value="24">SP</option>
-                            <option value="25">SE</option>
-                            <option value="26">TO</option>
-                        </select>
-                        <input type="text" name="cidade" placeholder=" Varginha">
-                    </p>
+                    <label for="estado">Estado/Cidade</label>
+                    <select name="estado" id="">
+                        <option value=""></option>
+                        <option value="1">AC</option>
+                        <option value="2">AL</option>
+                        <option value="3">AP</option>
+                        <option value="4">AM</option>
+                        <option value="5">BA</option>
+                        <option value="6">CE</option>
+                        <option value="27">DF</option>
+                        <option value="7">ES</option>
+                        <option value="8">GO</option>
+                        <option value="9">MA</option>
+                        <option value="10">MT</option>
+                        <option value="11">MS</option>
+                        <option value="12">MG</option>
+                        <option value="13">PA</option>
+                        <option value="14">PB</option>
+                        <option value="15">PR</option>
+                        <option value="16">PE</option>
+                        <option value="17">PI</option>
+                        <option value="18">RJ</option>
+                        <option value="19">RN</option>
+                        <option value="20">RS</option>
+                        <option value="21">RO</option>
+                        <option value="22">RR</option>
+                        <option value="23">SC</option>
+                        <option value="24">SP</option>
+                        <option value="25">SE</option>
+                        <option value="26">TO</option>
+                    </select>
+                    <input type="text" name="cidade" placeholder=" Varginha">
                 </div>
                 <div>
-                    <p>Selecione um arquivo <input type="file" name="arquivo"><br></p>
+                    <label for="file">Selecione um arquivo </label>
+                    <input type="file" name="arquivo">
                 </div>
                 <div>
-                    <p>
-                        <label for="sug">Sugestões</label> <br>
-                        <textarea name="sug" id="sug" cols="50" rows="10" required></textarea>
-                    </p>
+                    <label for="sug">Sugestões</label> <br>
+                    <textarea name="sug" id="sug" cols="50" rows="10" required></textarea>
                 </div>
                 <div>
-                    <p>
-                        <button type="submit">Enviar</button>
-                        <button type="reset">Limpar</button>
-                    </p>
+                    <button type="submit">Enviar</button>
+                    <button type="reset">Limpar</button>
                 </div>
             </fieldset>
         </form>
