--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -34,11 +34,11 @@
             <fieldset>
                 <legend>Contato</legend>
                 <div>
-                    <label for="nome">Nome :</label>
-                    <input type="text" name="nome" placeholder="João">
+                    <label for="nome">Nome:</label>
+                    <input type="text" name="nome" placeholder="João" maxlength="10">
                 </div>
                 <div>
-                    <label for="email">Email :</label>
+                    <label for="email">Email:</label>
                     <input type="email" name="email" placeholder="name@email">
                 </div>
                 <div>
@@ -87,7 +87,7 @@
                 </div>
                 <div>
                     <label for="sug">Sugestões</label> <br>
-                    <textarea name="sug" id="sug" cols="50" rows="10" required></textarea>
+                    <textarea name="sug" id="sug" cols="50" rows="3" required></textarea>
                 </div>
                 <div>
                     <button type="submit">Enviar</button>
